# geph4-binder

./: CHANGEPLAN.md  Cargo.toml  deploy.sh
.github/workflows/: build.yml
migrations/: 20230405142054_auth-pwdhash.sql  20230405142855_auth_pubkey.sql  20230405183333_move_pwdhash.sql  20230413163105_auth_migrations.sql  20230421202617_create_bridge_routes.sql
src/: announcements.rs  antigfw.rs  bindercore.rs  bindercore_v2.rs  bridge_store.rs  main.rs  mock_rss.xml  records.rs  responder.rs  serve.rs
src/bindercore/: bridge_db.rs
