[package]
name = "geph4-binder"
version = "0.1.0"
authors = ["geph-official"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
anyhow = "1.0.42"
libsodium-sys = "0.2.7"
png = "0.16.8"
ureq = "1.5.5"
structopt = "0.3.22"
# binder_transport = {path="../lib/binder_transport"}
# mizaru = {path="../lib/mizaru"}
bincode = "1.3.3"
native-tls = "0.2.7"
postgres-native-tls = "0.5.0"
easy-parallel = "3.1.0"
log = "0.4.14"
once_cell = "1.8.0"
parking_lot= "0.11.1"
hex= "0.4.3"
r2d2_postgres= "0.18.0"
r2d2= "0.8.9"
rand= "0.7.3"
x25519-dalek= "1.1.1"
env_logger = "0.8.4"
chrono = "0.4.19"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rsa = { version = "0.3.0", features = ["serde"] }
openssl = { version = "0.10.35", features = ["vendored"] }
statsd = "0.14.1"
dashmap= "4.0.2"
blake3= "0.3.8"
geph4-binder-transport = "0.1.1"
mizaru = "0.1.1"
