[package]
name = "geph4-binder"
version = "0.1.0"
authors = ["geph-official"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
anyhow = "1.0.42"
libsodium-sys = "0.2.7"

ureq = "1.5.5"
structopt = "0.3.22"
# binder_transport = {path="../lib/binder_transport"}
# mizaru = {path="../lib/mizaru"}
bincode = "1.3.3"
native-tls = "0.2.7"
postgres-native-tls = "0.5.0"

log = "0.4.14"
once_cell = "1.8.0"
parking_lot= "0.12.0"
hex= "0.4.3"
r2d2_postgres= "0.18.0"
r2d2= "0.8.9"
rand = "0.7.3"
x25519-dalek= "1.1.1"
env_logger = "0.8.4"
chrono = "0.4.19"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rsa = { version = "0.3.0", features = ["serde"] }
openssl = { version = "0.10.35", features = ["vendored"] }
statsd = "0.14.1"
dashmap= "4.0.2"
blake3= "0.3.8"
geph4-binder-transport = "0.2.3"
mizaru = "0.1.3"
cached = "0.25.0"

serde = "1.0.127"
futures-lite = "1.12.0"
serde_json = "1.0.81"

scopeguard = "1.1.0"
smol = "1.2.5"
rusty_pool = "0.6.0"
tap = "1.0.1"
jemallocator-global = "0.3.0"
moka = "0.9.3"
itertools = "0.10.3"

geph4-protocol =  "0.18"
 
async-trait = "0.1.57"
async-oneshot = "0.5.0"
smol_str = "0.1.23"
fastrand = "1.8.0"
bytes = "1.2.1"
smolscale = "0.4"
nanorpc = "0.1.7" 
warp = "0.3.3"
async-compat = "0.2.1"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "chrono" ] }
futures-util = "0.3.25"
dirs = "4.0.0"
reqwest = "0.11.13"
num_cpus = "1.14.0"
imbl = "2.0.0"
backoff = "0.4.0"
smol-timeout = "0.6.0"
semver = "1.0.16"
mimalloc = "0.1.34"
melprot = "0.13.4"
melstructs = "0.3.2"
melnet2 = "0.3.1"
melbootstrap = "0.8.3"
tmelcrypt = "0.2.7"
sosistab2 = "0.8.16"

[profile.release]
panic = 'abort'
